--- a/flexbox-basic/styles.css
+++ b/flexbox-basic/styles.css
@@ -22,9 +22,9 @@ h2 {
 }
 
 .container-flex {
-    display: flex;
     display: inline-flex;
     border: 3px solid black;
+    flex-direction: column;
 }
 
 .element-flex {
