--- a/flexbox-basic/styles.css
+++ b/flexbox-basic/styles.css
@@ -25,19 +25,32 @@ h2 {
     display: flex;
     border: 3px solid black;
     flex-direction: row;
-    flex-wrap: wrap-reverse;
-    flex-flow: row wrap;/* flex-direction and flex-wrap */
+    flex-wrap: wrap;
+    flex-flow: row wrap; /* flex-direction and flex-wrap */
 }
 
 .element-flex {
     padding: 10px;
+}
+
+.element-flex:nth-child(1) {
     background-color: #E53935;
 }
 
 .element-flex:nth-child(2) {
+    order: -1;
     background-color: #8E24AA;
 }
 
 .element-flex:nth-child(3) {
     background-color: #3F51B5;
+}
+
+@media screen and (min-width: 768px) {
+    .element-flex:nth-child(3) {
+        order: -1;
+    }
+    .element-flex:nth-child(2) {
+        order: 3;
+    }
 }
